# Python_youtube_video_downloader

./: .gitignore  README.md  conf_management.py  config.py  main.py  pyproject.toml  requirements.txt
python_youtube_downloader/: __init__.py  conf_management.py  config.py
tests/: test_python_youtube_downloader.py
